[workspace]
resolver = "2"
members = ["crates/*"]

[package]
name = "asenum"
version = "0.1.0"
authors = ["zincdev"]
edition = "2021"
description = "Small derive macro to safely convert the numerical value of an enum to the enum"
repository = "https://github.com/zincdev0/rs-asenum"
license = "Apache-2.0"
keywords = ["derive", "proc-macro", "enums", "convert", "boilerplate"]
categories = ["encoding", "no-std", "no-std::no-alloc", "parsing", "rust-patterns"]

[dependencies]
asenum_derive = { version = "0.1.0", path = "crates/asenum_derive" }
